feat: add admin api to delete medication logs by time range
